correciones en validaciones de formularios